fix for mobile overflow

--- a/css/usersignup.css
+++ b/css/usersignup.css
@@ -1,3 +1,10 @@
+body {
+    overflow: hidden;
+    width: 100%;
+    box-sizing: border-box;
+    height: 100%;
+}
+
 .homeButton {
     display: flex;
     width: 32px;
@@ -18,7 +25,7 @@
     margin: auto;
     
     width: 100%;
-    height: fit-content;
+    height: 430px;
     
     border-radius: 8px;
     box-shadow: none;
